force-app/main/default/objects/Cambio_Asesor_Banco__c/Cambio_Asesor_Banco__c.object-meta.xml
<CustomObject>
    <description>Este objeto es para guardar la información de los asesosres que se van actualizar de la pantalla vfCambioAsesorBanco y su controlador: ControllerClassCambioAsesorBanco.</description>
    <label>Cambio Asesor Banco</label>
    <nameField>
        <label>Nombre de Cambio Asesor Banco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cambio Asesor Bancos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>