force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <label>Agencia</label>
    <length>60</length>
    <type>Text</type>
</CustomField>