force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Codigo_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Asesor__c</fullName>
    <label>Codigo Asesor</label>
    <length>16</length>
    <type>Text</type>
</CustomField>