force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>