force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Contiene los diferentes estados que tiene el documento</description>
    <label>Estado</label>
    <length>8</length>
    <type>Text</type>
</CustomField>