force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Fecha_Modificacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Modificacion__c</fullName>
    <description>Captura la fecha del usuario que realiza la carga del archivo</description>
    <label>Fecha_Modificacion</label>
    <type>Date</type>
</CustomField>