force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Nombre_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Asesor__c</fullName>
    <label>Nombre Asesor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>