force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cliente__c</fullName>
    <label>Nombre Cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>