force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Nueva_Agencia__c.field-meta.xml
<CustomField>
    <fullName>Nueva_Agencia__c</fullName>
    <label>Nueva Agencia</label>
    <length>60</length>
    <type>Text</type>
</CustomField>