force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Nuevo_Codigo_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Codigo_Asesor__c</fullName>
    <label>Nuevo Codigo Asesor</label>
    <length>16</length>
    <type>Text</type>
</CustomField>