force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Nuevo_Nombre_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Nombre_Asesor__c</fullName>
    <label>Nuevo Nombre Asesor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>