force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Subproducto__c.field-meta.xml
<CustomField>
    <fullName>Subproducto__c</fullName>
    <label>Subproducto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>