force-app/main/default/objects/Cambio_Asesor_Banco__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <description>Para definir el usuario que realiza la carga</description>
    <label>Usuario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>